--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "backend",
+  "name": "ecommerce-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["ecommerce", "api", "nodejs", "express", "mongodb"],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "E-commerce backend API with deals, products, users, and orders management",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10"
   }
 }
