--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,11 +7,19 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ecommerce", "api", "nodejs", "express", "mongodb"],
+  "keywords": [
+    "ecommerce",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "description": "E-commerce backend API with deals, products, users, and orders management",
   "dependencies": {
+    "@edgestore/react": "^0.5.3",
+    "@edgestore/server": "^0.5.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -22,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "zod": "^4.0.15"
   }
 }
